# storage/api-docs/api-docs.json
@@ -14,6 +14,51 @@
         "version": "0.0.1"
     },
     "paths": {
+        "/api/gallery": {
+            "get": {
+                "tags": [
+                    "gallery"
+                ],
+                "summary": "Returns a Sample API gallery response",
+                "description": "A sample gallery to test out the API",
+                "operationId": "galler",
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "success": true,
+                                    "message": "Berhasil memproses galleries",
+                                    "galleries": [
+                                        {
+                                            "id": 1,
+                                            "title": "galllery 1",
+                                            "description": "deskripsi galllery 1",
+                                            "picture": "672ad27a5fe841730859642.jpeg",
+                                            "created_at": "2024-11-06T02:20:42.000000Z",
+                                            "updated_at": "2024-11-06T02:20:42.000000Z"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Data tidak ditemukan",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "detail": "strings"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/greet": {
             "get": {
                 "tags": [
@@ -50,7 +95,7 @@
                                 "schema": {},
                                 "example": {
                                     "success": true,
-                                    "message": "Berhasil mengambil Kategori Berita",
+                                    "message": "Berhasil memproses masukan user",
                                     "data": {
                                         "output": "Hallo Jon Doe",
                                         "firstname": "John",
@@ -65,6 +110,10 @@
         }
     },
     "tags": [
+        {
+            "name": "gallery",
+            "description": "gallery"
+        },
         {
             "name": "greeting",
             "description": "greeting"
